Add support for multiple speech recognition services
- Update .env.example to include Google Cloud Speech API key
- Modify main.py to add a new command-line argument for selecting recognition service
- Enhance AudioController to dynamically initialize speech recognition service
- Update SpeechRecognitionService to support Google Cloud Speech API
- Add service selection logic with fallback to free Google Speech Recognition

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 # VoiceScribe環境設定サンプル
 # 実際に使用する場合は、このファイルを.envにコピーし、適切な値を設定してください
 
-# OpenAI API設定
+# OpenAI API設定（Whisperモデルを使用する場合）
 OPENAI_API_KEY=your_openai_api_key_here
-# Groq API設定
-GROQ_API_KEY=your_groq_api_key_here 
+
+# Groq API設定（Groqの音声認識を使用する場合）
+GROQ_API_KEY=your_groq_api_key_here
+
+# Google Cloud Speech API設定（Google Cloud Speech APIを使用する場合）
+# 設定しない場合は無料枠のGoogle Speech Recognition（1分間に20回までのリクエスト制限あり）が使用されます
+GOOGLE_API_KEY=your_google_cloud_speech_api_credentials_json_here 
